# azureopenai

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README-AI-SERVICES.md  README-RBAC.md  README.md  RESTRUCTURING_COMPLETE.md  activate_checks.ps1  activate_infra.ps1  activate_projects.ps1  pyproject.toml  show_environments.ps1
checks/: Makefile  pyproject.toml  run-quality-checks.py
infra/: .env-min.template  .env.example  .env.min.template  .pre-commit-config.yaml  DEV-WORKFLOW.md  Makefile  README.md  create_ai_foundry_project.py  dev-requirements.txt  pyproject.toml  requirements.txt
infra/scripts/: install-dev-tools.ps1  upgrade-python-infra.ps1  upgrade-python-simple-infra.ps1  validate-env-config.py  validate_env_config.py  verify_python.py
projects/: Makefile  pyproject.toml
scripts/: .gh-config.env  .gh-config.env.template  README-ENV-SETUP.md  README-GITHUB-SETUP.md  create-gh.ps1  setup-environment.ps1  upgrade-python-simple.ps1  upgrade-python.ps1
