[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "azure-openai-infra"
version = "0.1.0"
description = "Azure OpenAI infrastructure deployment and management with dual AI services architecture"
authors = [
    {name = "rjglabs", email = "your-email@domain.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Azure Management SDKs
    "azure-core>=1.35.0",
    "azure-identity>=1.23.0",
    "azure-mgmt-resource>=24.0.0",
    "azure-mgmt-cognitiveservices>=13.6.0",
    "azure-mgmt-keyvault>=12.0.0",
    "azure-mgmt-search>=9.1.0",
    "azure-mgmt-storage>=23.0.1",
    "azure-mgmt-containerregistry>=14.0.0",
    "azure-mgmt-loganalytics>=12.0.0",
    "azure-mgmt-applicationinsights>=4.1.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-core>=1.6.0",

    # Configuration and utilities
    "python-dotenv>=1.1.1",
    "pydantic>=2.9.0",
    "rich>=13.9.4",
    "click>=8.1.8",
]

[tool.poetry]
package-mode = false

# Note: Development tool configurations (black, isort, mypy, etc.)
# are centralized at the repository root level in the main pyproject.toml.
# This ensures consistent code quality across all projects in the monorepo.
