[tool.poetry]
name = "azure-openai-projects"
version = "0.1.0"
description = "Azure OpenAI AI agents and applications"
authors = ["Your Name <your.email@domain.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.2"
# Azure AI and OpenAI
openai = "^1.95.1"
azure-ai-projects = "1.0.0b12"
azure-ai-agents = "^1.0.2"
azure-identity = "^1.23.0"
azure-keyvault-secrets = "^4.10.0"
azure-search-documents = "^11.5.3"
azure-storage-blob = "^12.26.0"
# Web frameworks
flask = "^3.1.1"
fastapi = "^0.116.1"
streamlit = "^1.39.0"
# Data processing
pandas = "^2.3.1"
numpy = "^2.3.2"
# AI and ML utilities
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
# Configuration and utilities
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
requests = "^2.32.4"
aiohttp = "^3.12.15"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
mypy = "^1.16.1"
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
